--- a/login.html
+++ b/login.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+      body{
+        background: #051923;
+      }
 .container {
 
     max-width: 350px;
-    background: #F8F9FD;
-    background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(244, 247, 251) 100%);
+    background: #003554;
     border-radius: 40px;
     padding: 25px 35px;
-    border: 5px solid rgb(255, 255, 255);
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 20px 20px 30px -20px;
-    margin-left: 38%;
+    border: 1px solid #00a6fb;
+    margin-left: 550px;
     margin-top: 210px;
   }
   
@@ -22,7 +23,7 @@
     text-align: center;
     font-weight: 900;
     font-size: 30px;
-    color: rgb(16, 137, 211);
+    color: #00A6FB;
   }
   
   .form {
@@ -31,13 +32,13 @@
   
   .form .input {
     width: 300px;
-    background: white;
+    background: #003554;
     border: none;
+    border: 1px solid #00a6fb;
+    color:white;
     padding: 15px 20px;
     border-radius: 20px;
     margin-top: 15px;
-    box-shadow: #cff0ff 0px 10px 10px -5px;
-    border-inline: 2px solid transparent;
   }
   
   .form .input::-moz-placeholder {
@@ -50,7 +51,7 @@
   
   .form .input:focus {
     outline: none;
-    border-inline: 2px solid #12B1D1;
+    border-inline: 2px solid #00A6FB;
   }
   
   .form .forgot-password {
@@ -61,32 +62,29 @@
   
   .form .forgot-password a {
     font-size: 11px;
-    color: #0099ff;
+    color: #00A6FB;
     text-decoration: none;
   }
   
   .form .login-button {
     display: block;
-    width: 100%;
+    width: 30%;
     font-weight: bold;
-    background: linear-gradient(45deg, rgb(16, 137, 211) 0%, rgb(18, 177, 209) 100%);
+    background: linear-gradient(to right, #3390a7, #0c66b5);
     color: white;
     padding-block: 15px;
     margin: 20px auto;
     border-radius: 20px;
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 20px 10px -15px;
     border: none;
     transition: all 0.2s ease-in-out;
   }
   
   .form .login-button:hover {
     transform: scale(1.03);
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 23px 10px -20px;
   }
   
   .form .login-button:active {
     transform: scale(0.95);
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 15px 10px -10px;
   }
   
   .social-account-container {
@@ -109,15 +107,14 @@
   }
   
   .social-account-container .social-accounts .social-button {
-    background: linear-gradient(45deg, rgb(0, 0, 0) 0%, rgb(112, 112, 112) 100%);
-    border: 5px solid white;
+    background: linear-gradient(45deg, #003554 0%, #00A6FB 100%);
+    border: 1px solid #00A6FB;
     padding: 5px;
     border-radius: 50%;
     width: 40px;
     aspect-ratio: 1;
     display: grid;
     place-content: center;
-    box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 12px 10px -8px;
     transition: all 0.2s ease-in-out;
   }
   
@@ -127,7 +124,7 @@
   }
   
   .social-account-container .social-accounts .social-button:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
   
   .social-account-container .social-accounts .social-button:active {
@@ -142,7 +139,7 @@
   
   .agreement a {
     text-decoration: none;
-    color: #0099ff;
+    color: #00A6FB;
     font-size: 9px;
   }
     </style>
