--- a/index.html
+++ b/index.html
@@ -64,69 +64,37 @@
     <!-- Pre Loader -->
     <div class="preload loaded" data-preload></div>
 
-    <!-- Navbar -->
+    <!-- Navbar (Reusable) -->
     <header class="header" data-header>
         <div class="container">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img src="Screenshot_2025-01-23_233310-removebg-preview.png" width="85px" height="30px" alt="Brewtopia.logo">
             </a>
             <nav class="navbar" data-navbar>
                 <button class="close-btn" aria-label="close menu" data-nav-toggler>
                     <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
                 </button>
-
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <img src="Screenshot_2025-01-23_233310-removebg-preview.png" width="160px" height="50px" alt="Brewtopia.logo">
                 </a>
                 <ul class="navbar-list">
-                    <li class="navbar-item">
-                        <a href="#nav1" class="navbar-link hover-underline active">
-                            <div class="seperator"></div>
-                            <span class="span">Home</span>
-                        </a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#nav2" class="navbar-link hover-underline">
-                            <div class="seperator"></div>
-                            <span class="span">Menu</span>
-                        </a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#nav3" class="navbar-link hover-underline">
-                            <div class="seperator"></div>
-                            <span class="span">Offers</span>
-                        </a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#nav4" class="navbar-link hover-underline">
-                            <div class="seperator"></div>
-                            <span class="span">Explore</span>
-                        </a>
-                    </li>
-                    <li class="navbar-item">
-                        <a href="#nav5" class="navbar-link hover-underline">
-                            <div class="seperator"></div>
-                            <span class="span">About</span>
-                        </a>
-                    </li>
+                    <li class="navbar-item"><a href="index.html#nav1" class="navbar-link hover-underline active"><div class="seperator"></div><span class="span">Home</span></a></li>
+                    <li class="navbar-item"><a href="index.html#nav2" class="navbar-link hover-underline"><div class="seperator"></div><span class="span">Menu</span></a></li>
+                    <li class="navbar-item"><a href="index.html#nav3" class="navbar-link hover-underline"><div class="seperator"></div><span class="span">Offers</span></a></li>
+                    <li class="navbar-item"><a href="index.html#nav4" class="navbar-link hover-underline"><div class="seperator"></div><span class="span">Explore</span></a></li>
+                    <li class="navbar-item"><a href="index.html#nav5" class="navbar-link hover-underline"><div class="seperator"></div><span class="span">About</span></a></li>
                 </ul>
                 <div class="text-center">
                     <p class="headline-1 navbar-title">Visit Us</p>
-                    <address class="body-4">
-                        Restaurant St, Delicious City, <br>
-                        London 9578, UK
-                    </address>
-                    <p class="body-4 navabr-text">Open: 9.30 am - 2.30pm</p>
+                    <address class="body-4">Restaurant St, Delicious City, <br>London 9578, UK</address>
+                    <p class="body-4 navbar-text">Open: 9.30 am - 2.30pm</p>
                     <div class="seperator"></div>
-                    <a href="" class=" body-4 sidebar-link">brewtopia@gmail.com</a>
-
+                    <a href="mailto:brewtopia@gmail.com" class="body-4 sidebar-link">brewtopia@gmail.com</a>
                     <p class="contact-label">Booking Request</p>
-                    <a href="" class="body-1 contact-number hover-underline">+91 63563 49549</a>
+                    <a href="tel:+916356349549" class="body-1 contact-number hover-underline">+91 63563 49549</a>
                 </div>
             </nav>
-            <a href="login.html" target="_blank" class="login">
-               Login
-            </a>
+            <a href="login.html" target="_blank" class="login">Login</a>
             <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
                 <span class="line line-1"></span>
                 <span class="line line-2"></span>
@@ -551,51 +519,50 @@
 
         
 
-        <!-- Footer -->
-
+        <!-- Footer (Reusable, Home link prominent) -->
         <footer class="footer">
-            <div class="footer-container">
-                <div class="footer-section">
-                    <h3>About Us</h3>
-                    <p>Experience the best coffee, snacks, and customer service at our cozy cafeteria.</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <a href="#nav1">Home</a>
-                    <a href="#nav2">Menu</a>
-                    <a href="#nav3">Offers</a>
-                    <a href="#nav4">Explore</a>
-                    <a href="#nav5">About</a>
-                </div>
-                <div class="footer-section">
-                    <h3>Contact</h3>
-                    <p>Email: brewtopia@gmail.com</p>
-                    <p>Phone: +91 6356349549</p>
-                    <p>Location: 123 Coffee Street, City</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Opening Hours</h3>
-                    <p>Monday - Friday: 8 AM - 10 PM</p>
-                    <p>Saturday - Sunday: 9 AM - 11 PM</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Follow Us</h3>
-                    <div class="social-icons">
-                        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
-                        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
-                        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"></a>
-                        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn"></a>
-                    </div>
-                    <div class="download-buttons">
-                        <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play"></a>
-                        <a href="#"><img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store"></a>
-                    </div>
-                </div>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>About Us</h3>
+            <p>Experience the best coffee, snacks, and customer service at our cozy cafeteria.</p>
+        </div>
+        <div class="footer-section">
+            <h3>Quick Links</h3>
+            <a href="index.html#nav1"><b>Home</b></a>
+            <a href="index.html#nav2">Menu</a>
+            <a href="index.html#nav3">Offers</a>
+            <a href="index.html#nav4">Explore</a>
+            <a href="index.html#nav5">About</a>
+        </div>
+        <div class="footer-section">
+            <h3>Contact</h3>
+            <p>Email: brewtopia@gmail.com</p>
+            <p>Phone: +91 6356349549</p>
+            <p>Location: 123 Coffee Street, City</p>
+        </div>
+        <div class="footer-section">
+            <h3>Opening Hours</h3>
+            <p>Monday - Friday: 8 AM - 10 PM</p>
+            <p>Saturday - Sunday: 9 AM - 11 PM</p>
+        </div>
+        <div class="footer-section">
+            <h3>Follow Us</h3>
+            <div class="social-icons">
+                <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
+                <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram"></a>
+                <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"></a>
+                <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn"></a>
             </div>
-            <div class="footer-bottom">
-                <p>Brewtopia &copy; 2025 Cafeteria. All Rights Reserved.</p>
+            <div class="download-buttons">
+                <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play"></a>
+                <a href="#"><img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store"></a>
             </div>
-        </footer>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>Brewtopia &copy; 2025 Cafeteria. All Rights Reserved.</p>
+    </div>
+</footer>
     </main>
     <script src="Cafe.js"></script>
 </body>
